<resources>
    <string name="app_name">SCI Pro Application</string>
    <string name="sign_in_with_phone_number">Sign in with phone number</string>
    <string name="do_you_want_to_close_app">Do you want to close the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="student">Student</string>
    <string name="cheacher">Teacher</string>
    <string name="select_your_profile_and_create_account">Select your profile and create account</string>
    <string name="select_profil">Select profil</string>
    <string name="teacher_info">Define teacher informations</string>
    <string name="name">name</string>
    <string name="surname">Surname</string>
    <string name="first_name">first name</string>
    <string name="select_your_school">Select your school</string>
    <string name="select_your_classes">Select your classes</string>
    <string name="class_cheach">The classes you teach</string>
    <string name="save">Save</string>
    <string name="define_the_programm">Define the programm</string>
    <string name="today_str">today</string>
    <string name="yesterday_str">Yesterday</string>
    <string name="upload_image_progress">upload in progress</string>
    <string name="click_to_define">Click to difine</string>
    <string name="upload_image_finished">Upload image finished</string>
    <string name="student_info">Define student informations</string>
    <string name="matricule">registration number</string>
    <string name="select_your_class">Select your class</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_first_name">Enter your first name</string>
    <string name="enter_matricule_name">Enter the matricule</string>
    <string name="select_class">Please select your classes</string>
    <string name="select_class_defin_program">Select one class</string>
    <string name="program_of_class">Program of class</string>
    <string name="program_title">Program title</string>
    <string name="enter_title">Enter the title</string>
    <string name="program_description">Program description</string>
    <string name="add_description">add description...</string>
    <string name="enter_all_fields">Please fill all the fields</string>
    <string name="check_internet_connexion">Please check your internet connection!</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="Chapters">Chapters</string>
    <string name="chapter_intitulate">Chapter intitulate</string>
    <string name="chpater_description">Chapter description</string>
    <string name="enter_initulate">Enter the intitulate</string>
    <string name="no_course_avalaible">No available course</string>
    <string name="course_intitulate">Course intitulate</string>
    <string name="cancel">Cancel</string>
    <string name="create_a_course">Create a course</string>
    <string name="select_pdf_course">Select PDF</string>
</resources>