<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/dimen_18dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:layout_marginHorizontal="@dimen/dimen_10dp"
        android:id="@+id/id_main_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chapter_intitulate"
            android:textColor="@color/red_sci"/>
        <EditText
            android:id="@+id/id_program_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_initulate"
            android:textSize="@dimen/dimen_17sp"
            android:layout_marginTop="@dimen/dim_8dp"
            android:padding="@dimen/dim_4dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chpater_description"
            android:textColor="@color/red_sci"
            android:layout_marginTop="@dimen/dim_8dp"
            />
        <EditText
            android:id="@+id/id_program_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dim_4dp"
            android:textSize="@dimen/dimen_14sp"
            android:minLines="4"
            android:hint="@string/add_description"/>
    </LinearLayout>
    <Button
        android:id="@+id/id_save_button"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_8dp"
        android:layout_marginBottom="@dimen/dim_8dp"
        android:background="@color/blue_sci"
        android:text="@string/save"
        android:layout_gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/id_main_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>