<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.teacher.fragment.createAccount.CreateTeacherAccountFragment2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/id_user_scheacher_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/teacher_info"
            app:titleTextColor="@color/red_sci" />

        <LinearLayout
            android:id="@+id/id_top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_20dp"
            android:layout_marginHorizontal="@dimen/dim_8dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/id_user_scheacher_tool_bar">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/id_select_classes"
                    android:layout_width="@dimen/dim_30dp"
                    android:layout_height="@dimen/dim_30dp"
                    android:layout_marginStart="@dimen/dimen_12dp"
                    android:padding="@dimen/dim_6dp"
                    android:src="@drawable/ic_baseline_add_24"
                    android:background="@drawable/circular_shape_programm" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_18sp"
                    android:layout_marginStart="@dimen/dim_30dp"
                    android:text="@string/class_cheach" />

            </LinearLayout>

            <ListView
                android:id="@+id/id_selected_classes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12dp" />

        </LinearLayout>


        <Button
            android:id="@+id/id_next_button"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:background="@color/blue_sci"
            android:text="@string/save"
            android:layout_gravity="center"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/id_top_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.1" />


        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teacher_creation_progress"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>